fix: change blue color on dark mode

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,7 @@
     @apply text-slate-800 dark:text-white;
 
     &:hover {
-      @apply text-blue-500;
+      @apply text-blue-500 dark:text-blue-400;
     }
   }
 }
