--- a/src/index.scss
+++ b/src/index.scss
@@ -8,5 +8,5 @@ body {
 }
 
 a {
-  @apply text-blue-500 hover:underline;
+  @apply text-blue-500 hover:underline dark:text-blue-400;
 }
